--- a/styles/default.css
+++ b/styles/default.css
@@ -1,19 +1,4 @@
-body {
-    background: #ccc;
-}
-
-#title, #subtitle, #post-title {
-    color:blue;
-}
-
-#post-title {
-    font-size: 16px;
-    font-style: italic;
-}
-
-.post {
-    background: #fff;
-    padding: 10px;
-    border: 3px solid #000;
-    margin: 10px;
-}
+@import "./tipography.css";
+@import "./header.css";
+@import "./introducao.css";
+@import "./global.css";
